--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.data.redis.host=${REDISHOST}
 spring.data.redis.port=${REDISPORT}
 spring.data.redis.username=${REDISUSER}
 spring.data.redis.password=${REDISPASSWORD}
+mr.lee.authenticate=${AUTHENTICATE}
